; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_set_default_whitespace_mode.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_set_default_whitespace_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apply_state = type { i64, i32, i32 }

@apply_default_whitespace = common dso_local global i32 0, align 4
@warn_on_ws_error = common dso_local global i32 0, align 4
@nowarn_ws_error = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.apply_state*)* @set_default_whitespace_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_default_whitespace_mode(%struct.apply_state* %0) #0 {
  %2 = alloca %struct.apply_state*, align 8
  store %struct.apply_state* %0, %struct.apply_state** %2, align 8
  %3 = load %struct.apply_state*, %struct.apply_state** %2, align 8
  %4 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %23, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @apply_default_whitespace, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %23, label %10

10:                                               ; preds = %7
  %11 = load %struct.apply_state*, %struct.apply_state** %2, align 8
  %12 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i32, i32* @warn_on_ws_error, align 4
  br label %19

17:                                               ; preds = %10
  %18 = load i32, i32* @nowarn_ws_error, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i32 [ %16, %15 ], [ %18, %17 ]
  %21 = load %struct.apply_state*, %struct.apply_state** %2, align 8
  %22 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  br label %23

23:                                               ; preds = %19, %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
